k8s/billingmanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billingmanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: billing
  template:
    metadata:
      labels:
        component: billing
    spec:
      containers:
        - name: billingmanagement
          image: deven2690/billingmanagement
          ports:
            - containerPort: 8381
