k8s/customermanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customermanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: customer
  template:
    metadata:
      labels:
        component: customer
    spec:
      containers:
        - name: customermanagement
          image: deven2690/customermanagement
          ports:
            - containerPort: 8081
