k8s/inventorygateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
        - name : inventorygateway
          image: deven2690/inventoryapigateway
          ports:
            - containerPort: 9890
