k8s/inventorymanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorymanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: inventory
  template:
    metadata:
      labels:
        component: inventory
    spec:
      containers:
        - name: inventorymanagement
          image: deven2690/inventorymanagement
          ports:
            - containerPort: 8181
