k8s/ordermanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordermanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ordermanage
  template:
    metadata:
      labels:
        component: ordermanage
    spec:
      containers:
        - name: ordermanagment
          image: deven2690/ordermanagement 
          ports:
            - containerPort: 8281
