k8s/billingmanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billingmanagement-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: billing
  ports:
    - port: 8381
      targetPort: 8381
