k8s/customermanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customermanagament-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: customer
  ports:
    - port: 8081
      targetPort: 8081
