k8s/inventorygateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorygateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 9890
      targetPort: 9890
