k8s/inventorymanagment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorymanagement-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: inventory
  ports:
    - port: 8181
      targetPort: 8181
