k8s/notificationmanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationmanagement-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: notification
  ports:
    - port: 8581
      targetPort: 8581
