k8s/notificationmanagementawssns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationmanagemetawdsns-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: notificationawdsns
  ports:
    - port: 8781
      targetPort: 8781
