k8s/notificationmanagementawssqs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationmanagmentawssqs-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: notificationawssqs
  ports:
    - port: 8681
      targetPort: 8681
