k8s/ordermanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ordermanage
  ports:
    - port: 8281
      targetPort: 8281
