k8s/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class:  nginx
spec:
  rules:
    - http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: inventorygateway-cluster-ip-service
                port:
                  number: 9890
